# Sandbox-flowmanner

./: .gitignore  .gitleaksignore  .verify-be-sandbox-picker.md  .verify-fe-sandbox-picker.md  AGENTS.homelab.OLD.md  AGENTS.homelab.md  AGENTS.homelab.md.bak.20260523-110723  AGENTS.md  AGENTS.md.bak.20260523-110723  AGENTS.ops.md  AGENTS.vps.md  AGENTS.vps.md.bak.20260523-110723  DEPLOY-RUNBOOK.md  Fix-deploy-frontend.txt  Gemini-Analyze-backend-frontend(052226).txt  HANDOFF.md  IMPROVEMENTS-LOG.md  Makefile  REBUILD-BACKEND.md  RESTORE.md  SESSION-RITUAL.md  STATUS.example.md  backup-flowmanner.sh  deepseek-research-prompt.md  deploy-all.sh  deploy-backend.sh  deploy-frontend-remote.sh  deploy-frontend.sh  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  flowmanner-plan-only.yaml  flowmanner.yaml  frontend-agent-gallery-spec.md  frontend-agent-gallery.patch  openapi.json  probe_marker.txt  pyproject.toml  restart-nginx.sh  seed_templates.py
sdk-python/flowmanner-api-client/: README.md  pyproject.toml
sdk-python/flowmanner-api-client/examples/: cost_analytics.py  create_and_run_mission.py  quickstart.py
sdk-python/flowmanner-api-client/flowmanner_api_client/: __init__.py  cli.py  high_level.py
sdk-python/flowmanner-api-client/tests/: test_cli.py  test_flowmanner_client.py
tools/skillopt-gate/: README.md  conftest.py  pyproject.toml
tools/skillopt-gate/demo/: SKILL.md  checker.py  edits.json
tools/skillopt-gate/skillopt_gate/: __init__.py  cli.py  core.py  optimizer.py  runner.py  staging.py  types.py
(+4706 files in other folders)
